change le titre en majuscule

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Premier portfolio</title>
+    <title>PREMIER FORFOLIO</title>
 
 </head>
 <body>
