ajout nouvel burgeur

--- a/index.html
+++ b/index.html
@@ -40,17 +40,21 @@
             <div class="nav-principal">
                 <ul>
                     <li>
-                        <a href="#Acceuil"  class="liens-navigation">Acceuil</a>
+                        <a href="index2.html"  class="liens-navigation">ACCEUIL</a>
                     </li>
                     <li>
-                        <a href="#Apropos"  class="liens-navigation">Apropos</a>
+                        <a href="index2.html"  class="liens-navigation">A PROPOS</a>
                     </li>
                     <li>
-                        <a href="#Contact"  class="liens-navigation">Contact</a>
+                        <a href="index2.html"  class="liens-navigation" style="right: 40%;">COMPETENCE</a>
+                    </li>
+                    <li>
+                        <a href="index2.html#contact"  class="liens-navigation" style="right: 45%;">CONTACTE</a>
                     </li>
                 </ul>
             </div>
             <div class="burger">
+                <div class="burger-ligne"></div>
                 <div class="burger-ligne"></div>
                 <div class="burger-ligne"></div>
             </div>
@@ -68,7 +72,7 @@
                                                                  
                 </span>
                 <hr>
-                <a  href="nav-principal" class="menu">En savoir plus</a> 
+                <a  href="index2.html#apropos" class="menu">En savoir plus</a> 
                 <a href="index2.html#contact"  class="contact"> Contacte</a> 
 
         
