--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="./style2.css">
 </head>
 <body>
+  <!-- navigateur -->
+<div class="burger">
+    <div class="burger-ligne"></div>
+    <div class="burger-ligne"></div>
+    <div class="burger-ligne"></div>
+</div>
+
+
+
   <div id="parallax-world-of-ugg">
   
     <section>
@@ -18,7 +27,7 @@
     </section>
     
     <section>
-        <div class="parallax-one">
+        <div class="parallax-one " id="apropos">
           <h2>A PROPOS</h2>
           <section>
             <div class="block">
