--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                         <a href="index2.html"  class="liens-navigation">A PROPOS</a>
                     </li>
                     <li>
-                        <a href="index2.html"  class="liens-navigation" style="right: 40%;">COMPETENCE</a>
+                        <a href="index2.html"  class="liens-navigation" >COMPETENCE</a>
                     </li>
                     <li>
-                        <a href="index2.html#contact"  class="liens-navigation" style="right: 45%;">CONTACTE</a>
+                        <a href="index2.html#contact"  class="liens-navigation" >CONTACT</a>
                     </li>
                 </ul>
             </div>
