--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="cont">
                 <ul class="cont-icons">
                     <li class="icon">
-                        <a target="_blank" href="https://web.facebook.com/?_rdc=1&_rdr" ><img src="./image/facebook.svg"  alt=""> </a>
+                        <a target="_blank" href="https://web.facebook.com/hasina.rakotoniaina.315" ><img src="./image/facebook.svg"  alt=""> </a>
                     </li>
                     <li class="icon">
                         <a target="_blank" href="https://www.linkedin.com/in/hasina-rakotoniaina-915882215/"> <img src="./image/linkedin-in.svg"  alt=""></a>
