--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
             <div class="nav-principal">
                 <ul>
                     <li>
-                        <a href="index2.html"  class="liens-navigation">ACCEUIL</a>
+                        <a href="#acceuil"  class="liens-navigation" id="precedant">ACCEUIL</a>
                     </li>
                     <li>
-                        <a href="index2.html"  class="liens-navigation">A PROPOS</a>
+                        <a href="index2.html#apropos"  class="liens-navigation">A PROPOS</a>
                     </li>
                     <li>
-                        <a href="index2.html"  class="liens-navigation" >COMPETENCE</a>
+                        <a href="index2.html#competence"  class="liens-navigation" >COMPETENCE</a>
                     </li>
                     <li>
                         <a href="index2.html#contact"  class="liens-navigation" >CONTACT</a>
                     </li>
                 </ul>
             </div>
-            <div class="burger">
+            <div class="burger" >
                 <div class="burger-ligne"></div>
                 <div class="burger-ligne"></div>
                 <div class="burger-ligne"></div>
@@ -73,7 +73,7 @@
                 </span>
                 <hr>
                 <a  href="index2.html#apropos" class="menu">En savoir plus</a> 
-                <a href="index2.html#contact"  class="contact"> Contacte</a> 
+                <a href="index2.html#contact"  class="contact"> Contact</a> 
 
         
             </div>
