--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,7 @@
     
     
     <section>
-      <div class="parallax-three">
+      <div class="parallax-three" id="competance">
         <h2>COMPETENCES</h2>
         <section>
           <div class="content">
